--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -356,7 +356,7 @@
     background-size: 150%;
     font-size: 20px;
     line-height: 53px;
-    transition: .5s ease;
+    transition: right .5s ease;
     -webkit-box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
