주요고객사 순서조정 이미지변경 상담신청 자세히보기 팝업 수정

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -482,7 +482,7 @@
     flex-direction: column;
     width: 80%;
     max-width: 552px;
-    height: 80%;
+    max-height: 80%;
     padding: 40px;
     border-radius: 10px;
     background: #fff;
